--- a/add.html
+++ b/add.html
@@ -15,34 +15,32 @@
 <body>
     <form method="post" action="add.php">
         <nav class='navbar navbar-expand-lg navbar-dark bg-primary'>
-            <a class='navbar-brand' href='#'>ITDP</a>
-            <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent'
-                aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
-                <span class='navbar-toggler-icon'></span>
+            <a class='navbar-brand' href='index.php'>ITDP</a>
+            <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
+              <span class='navbar-toggler-icon'></span>
             </button>
             <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-                <ul class='navbar-nav mr-auto'>
-                    <li class='nav-item active'>
-                        <a class='nav-link' href='index.php'>Home</a>
-                    </li>
-                    <li class='nav-item'>
-                        <a class='nav-link' href='eventlist.html'>Events</a>
-                    </li>
-                    <li class='nav-item'>
-                        <a class='nav-link' href='history.php'>History</a>
-                    </li>
-                </ul>
-                <ul class='navbar-nav'>
-                    <li class='nav-item active text-right'>
-                        <a class='nav-link' href='#'>Xuan<br><span style="font-size: 9px; color: white;">Project
-                                Manager</span></a>
-                        <!-- <span style="font-size: 9px; color: white;">Project Manager</span> -->
-                    </li>
-                    <li class='nav-item active'>
-                        <a class='nav-link' href='#'><small>Logout</small></a>
-                    </li>
-                </ul>
+              <ul class='navbar-nav mr-auto'>
+                <li class='nav-item active'>
+                  <a class='nav-link' href='#'>Home</a>
+                </li>
+                <li class='nav-item'>
+                    <a class='nav-link' href='#'>Add Events</a>
+                </li>
+                <li class='nav-item'>
+                  <a class='nav-link' href='#'>Report</a>
+                </li>
+              </ul>
+              <ul class='navbar-nav'>
+                <li class='nav-item active'>
+                  <a class='nav-link' href='#'>Xuan</a>
+                </li>
+                <li class='nav-item active'>
+                  <a class='nav-link' href='#'><small>Logout</small></a>
+                </li>
+              </ul>
             </div>
+          </nav>
         </nav>
 
 
