Xuan -> ACCOUNT and Enroll Now in Events

--- a/details.html
+++ b/details.html
@@ -35,7 +35,7 @@
                 <li class='nav-item active text-right'>
                     <!-- <a class='nav-link' href='#'>Xuan<br><span style="font-size: 9px; color: white;">Project
                             Manager</span></a> -->
-                    <a class='nav-link' href='#'>Xuan</a>
+                    <a class='nav-link' href='#'>ACCOUNT</a>
                     <!-- <span style="font-size: 9px; color: white;">Project Manager</span> -->
                 </li>
                 <li class='nav-item active'>
